🎨 refactor: rename redirect placeholder name

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
 
-                <data android:scheme="${appAuthRedirectScheme}" />
+                <data android:scheme="${clientRedirectURI}" />
 
             </intent-filter>
         </activity>
